Fixed Spacing of Info Container on Mobile. Added Language Icons
Now the information should fit on all cards. icons have now replaced text on lanuages.

--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -34,7 +34,7 @@ body {
     transition: all 0.3s ease 0s;
     background-color: rgba(207, 206, 206, 0.098);
     margin-bottom: 2vh;
-    max-height: 45vh;
+    height: 45vh;
     display: flex;
     justify-content: flex-end;
     position: relative;
@@ -64,7 +64,8 @@ body {
     color: black;
     border: 5px solid black;
     font-size: 2vh;
-    margin-bottom: 50vw;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
 
 .project-name {
@@ -104,8 +105,14 @@ body {
 
 
 
-.project-language {
-    word-break: normal;
+.project-language{
+    display: flex;
+    font-size: 8vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1vh;
+    justify-content: space-around;
+    width: 30%;
 }
 #back_button {
     position: fixed;
@@ -141,11 +148,17 @@ body {
         animation: 1.3s ease-in-out 0s 1 FadeInMobile;
     }
 
+    .project-Description{
+        margin-top: -2vh;
+        margin-bottom: 3vh;
+    }
+
 
     #long-project-container{
         background-color: #000000a8;
         top:35vh;
     }
+
 
     #long-project-name{
         font-size: 8vw;
@@ -163,7 +176,16 @@ body {
         margin-top: 3vh;
     }
 
+    .project-language{
+        font-size: 7vh;
+        width: 70%;
+    }
 
+
+
+    #Deployment {
+        margin-top: 1vh;
+    }
 
 
     #back_button {
